--- a/src/app/modules/article/list/list.html
+++ b/src/app/modules/article/list/list.html
@@ -1,4 +1,4 @@
-<md-card ng-repeat="article in articles | orderBy: '-created_at'">
+<md-card ng-repeat="article in vm.articles | orderBy: '-created_at'">
     <md-card-content>
         <h2 class="md-title">{{ article.title }}</h2>
 
@@ -7,6 +7,6 @@
     </md-card-content>
     <div class="md-actions" layout="row" layout-align="end center">
         <md-button ng-href="#/edit/{{ article.id }}" class="md-raised md-primary">Редактировать</md-button>
-        <md-button ng-click="showConfirmDelete($event, article)" class="md-raised md-warn">Удалить</md-button>
+        <md-button ng-click="vm.showConfirmDelete($event, article)" class="md-raised md-warn">Удалить</md-button>
     </div>
 </md-card>
