enable html5 history api

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <md-toolbar>
     <div class="md-toolbar-tools">
-        <h1><a ng-href="#/">Blog</a></h1>
+        <h1><a ng-href="/">Blog</a></h1>
         <span flex></span>
-        <md-button ng-href="#/create">Create</md-button>
+        <md-button ng-href="/create">Create</md-button>
     </div>
 </md-toolbar>
