Change to UI router

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -2,6 +2,6 @@
     <div class="md-toolbar-tools">
         <h1><a ng-href="/">Blog</a></h1>
         <span flex></span>
-        <md-button ng-href="/create">Create</md-button>
+        <md-button ui-sref="article.create">Create</md-button>
     </div>
 </md-toolbar>
