add default route state

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,6 +1,6 @@
 <md-toolbar>
     <div class="md-toolbar-tools">
-        <h1><a ui-sref="article.list">Blog</a></h1>
+        <h1><a ui-sref="/">Blog</a></h1>
         <span flex></span>
         <md-button ui-sref="article.create">Create</md-button>
     </div>
