--- a/src/app/modules/article/list/list.html
+++ b/src/app/modules/article/list/list.html
@@ -1,12 +1,12 @@
 <md-card ng-repeat="article in vm.articles | orderBy: '-created_at'">
     <md-card-content>
-        <h2 class="md-title">{{ article.title }}</h2>
+        <h2 class="md-title"><a ui-sref="article.show({id: article.id})">{{ article.title }}</a></h2>
 
-        <p>{{ article.description }}</p>
+        <p>{{ article.description | limit: 20 }}</p>
         <small>{{ article.created_at }}</small>
     </md-card-content>
     <div class="md-actions" layout="row" layout-align="end center">
         <md-button ui-sref="article.edit({id: article.id})" class="md-raised md-primary">Редактировать</md-button>
-        <md-button ng-click="vm.showConfirmDelete($event, article)" class="md-raised md-warn">Удалить</md-button>
+        <md-button article-confirm-delete="vm.removeArticle(article)" class="md-raised md-warn">Удалить</md-button>
     </div>
 </md-card>
