Working with directive

--- a/src/app/modules/article/show/show.html
+++ b/src/app/modules/article/show/show.html
@@ -1,5 +1,7 @@
 <md-card>
     <md-card-content>
+        <!-- TODO: ТУТ ХОЧУ ПОЛУЧИТЬ КОММЕНТЫ -->
+        {{ vm.comments }}
         <h2 class="md-title">{{ vm.article.title }}</h2>
 
         <p>{{ vm.article.description }}</p>
@@ -7,6 +9,8 @@
     </md-card-content>
     <div class="md-actions" layout="row" layout-align="end center">
         <md-button ui-sref="article.edit({id: vm.article.id})" class="md-raised md-primary">Редактировать</md-button>
-        <md-button article-confirm-delete="vm.removeArticle(vm.article)" class="md-raised md-warn">Удалить</md-button>
+        <md-button article-confirm-delete="vm.removeArticle()" class="md-raised md-warn">Удалить</md-button>
     </div>
 </md-card>
+
+<comments load="vm.articleComments()" create="vm.articleCommentsCreate()"></comments>
