--- a/src/app/modules/article/show/show.html
+++ b/src/app/modules/article/show/show.html
@@ -1,14 +1,14 @@
 <md-card>
     <md-card-content>
-        <h2 class="md-title">{{ vm.article.title }}</h2>
+        <h2 class="md-title">{{ showArticle.article.title }}</h2>
 
-        <p>{{ vm.article.description }}</p>
-        <small>{{ vm.article.created_at }}</small>
+        <p>{{ showArticle.article.description }}</p>
+        <small>{{ showArticle.article.created_at }}</small>
     </md-card-content>
     <div class="md-actions" layout="row" layout-align="end center">
-        <md-button ui-sref="article.edit({id: vm.article.id})" class="md-raised md-primary">Редактировать</md-button>
-        <md-button article-confirm-delete="vm.removeArticle()" class="md-raised md-warn">Удалить</md-button>
+        <md-button ui-sref="article.edit({id: showArticle.article.id})" class="md-raised md-primary">Редактировать</md-button>
+        <md-button article-confirm-delete="showArticle.removeArticle()" class="md-raised md-warn">Удалить</md-button>
     </div>
 </md-card>
 
-<comments items="vm.article.comments" load="vm.articleComments()" create="vm.articleCommentsCreate(comment)"></comments>
+<comments items="showArticle.article.comments" create="showArticle.articleCommentsCreate(comment)"></comments>
