--- a/src/app/modules/article/create/create.html
+++ b/src/app/modules/article/create/create.html
@@ -1,13 +1,13 @@
-<form name="article__create" ng-submit="vm.processForm()">
+<form name="article__create" ng-submit="createArticle.processForm()">
     <div>
         <md-input-container>
             <label>Title</label>
-            <input ng-model="vm.article.title" required>
+            <input ng-model="createArticle.article.title" required>
         </md-input-container>
 
         <md-input-container>
             <label>Description</label>
-            <textarea ng-model="vm.article.description" rows="10" required></textarea>
+            <textarea ng-model="createArticle.article.description" rows="10" required></textarea>
         </md-input-container>
 
         <md-button type="submit" class="md-raised md-primary">Save</md-button>
