--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -3,5 +3,6 @@
         <h1><a ui-sref="article.list">Blog</a></h1>
         <span flex></span>
         <md-button ui-sref="article.create">Create</md-button>
+        <md-button ng-show="navbar.$sessionStorage.auth" ng-click="navbar.logout()">Logout</md-button>
     </div>
 </md-toolbar>
